# ml-segmentation

./: README.md
.github/workflows/: deploy.yml
ml-segment/: Dockerfile  Makefile  pyproject.toml
ml-segment/infra/: Pulumi.yaml  TraefikRoute.py  __main__.py  requirements.txt
ml-segment/src/mlsegment/common/: segment.py
ml-segment/src/mlsegment/streamlit/: ui.py
mlsegment/: Dockerfile  Makefile  pyproject.toml
mlsegment/infra/: Pulumi.yaml  TraefikRoute.py  __main__.py
mlsegment/src/mlsegment/common/: segment.py
mlsegment/src/mlsegment/serve/: __main__.py
