[tool.poetry]
name = "mlsegment"
version = "0.1.0"
description = ""
authors = ["Naoufal <naoufal51@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
Pillow = "^8.2.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"
uvicorn = "^0.17.5"
boto3 = "1.19.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"


[tool.poetry.scripts]
serve = "src.mlsegment.serve.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
